# oracle

./: .gitignore  CHARTER.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/oracle-core/: Cargo.toml
crates/oracle-core/examples/: cycle_granularity_perf.rs
crates/oracle-core/src/: bus.rs  lib.rs  rng.rs  scheduler.rs  state_hash.rs  stub_cpu.rs  system.rs
crates/oracle-core/src/m68000/: bus68k.rs  decode.rs  ea.rs  exception.rs  microop.rs  mod.rs  prototype.rs  registers.rs
crates/oracle-core/tests/: determinism_gate.rs  oracle_differential.rs  proptests.rs  singlestep_m68000.rs
docs/: 2026-07-01-plan-audit.md  2026-07-01-vdp-design.md  foundations.md  m68000-vocabulary-ledger.md  research-digest.md
docs/decisions/: 2026-06-24-cycle-granularity.md  2026-07-01-audit-policies.md
docs/plans/: 2026-06-24-m68000-microop-framework.md  2026-06-24-phase-0.md  2026-06-25-m68000-compare-test-clear.md  2026-06-25-m68000-ea-machinery.md  2026-06-25-m68000-exceptions.md  2026-06-25-m68000-flow-control.md  2026-06-25-m68000-move-family.md  2026-06-26-m68000-adda-suba-logic.md  2026-06-26-m68000-bit-ops.md  2026-06-26-m68000-neg-not-ext-swap.md  2026-06-26-m68000-scc-tas.md  2026-06-27-m68000-mul.md  2026-06-27-m68000-shifts-rotates.md  2026-06-28-m68000-div.md
tools/: fetch-tests.sh  singlesteptests.sha256
