[package]
name = "oracle-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Deterministic, no-I/O Sega Genesis / Mega Drive emulation core for the Oracle debugging engine."

[dependencies]
bincode = { version = "2", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
